--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <p class="firstCurrency cur">ZŁ</p>
-        <p class="secondCurrency cur">EUR</p>
+        <p class="secondCurrency cur">???</p>
 
         <div class="second box">
             <p class="currencyText"></p>
